fix: Index page changed

--- a/index.html
+++ b/index.html
@@ -1,11 +1,101 @@
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <title>Página de registro</title>
+  <!-- Enlazar el archivo CSS externo -->
+  <link rel="stylesheet" href="styles/style.css">
+  <!-- Enlazar el archivo Javascript externo -->
+  <script src="scripts/script.js"></script>
+  <script defer src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+  <script defer src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
 </head>
 <body>
-    Hola aksdjakj kjsdfk jslfjlskdjflksajflksjflkjsdlk jsdlkjflsdaksdkjsdsdj
+  <div class="container">
+    <h1 class="title">Página de registro</h1>
+    <form action="/signup" method="POST" onsubmit="return validateForm()">
+      <div class="form-group">
+        <div class="form-label">
+          <label for="name">Nombre:</label>
+        </div>
+        <div class="form-input">
+          <input type="text" id="name" name="name" required>
+        </div>
+      </div>
+      <div class="form-group">
+        <div class="form-label">
+          <label for="email">Correo electrónico:</label>
+        </div>
+        <div class="form-input">
+          <input type="email" id="email" name="email" required>
+        </div>
+        <img class="icon-pages" src="Images/mail.png" alt="Mail">
+      </div>
+      <div class="form-group">
+        <div class="form-label">
+          <label for="password">Contraseña:</label>
+        </div>
+        <div class="form-input">
+          <input type="password" id="password" name="password" required>
+        </div>
+        <img class="icon-pages" src="Images/key.png" alt="Key">
+      </div>
+      <div class="form-group">
+        <div class="form-label">
+          <label for="confirm">Confirmar contraseña:</label>
+        </div>
+        <div class="form-input">
+          <input type="password" id="confirm" name="confirm" required>
+        </div>
+      </div>
+      <div class="form-group">
+        <div class="form-label"></div>
+        <div class="form-input-checkbox">
+          <input type="checkbox" id="agree" name="agree" required>
+          <label for="agree">Acepto los términos y condiciones</label>
+        </div>
+      </div>
+      <div class="form-button">
+        <input type="submit" value="Registrarse">
+      </div>
+    </form>
+  </div>
+
+<script type="module">
+// Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/9.21.0/firebase-app.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
+  
+  // Your web app's Firebase configuration
+  const firebaseConfig = {
+    apiKey: "AIzaSyDYWwYqWXG1R0OdeCC_dw3Bdxe55eDHa3Y",
+    authDomain: "valorantappweb.firebaseapp.com",
+    projectId: "valorantappweb",
+    storageBucket: "valorantappweb.appspot.com",
+    messagingSenderId: "81734703779",
+    appId: "1:81734703779:web:fbeccbbc1f72376d53fd16"
+  };
+
+  const email = "paulroman3d@gmail.com";
+  const password = "a202031";
+  
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+
+  import { getAuth, createUserWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/9.21.0/firebase-auth.js";
+
+const auth = getAuth();
+createUserWithEmailAndPassword(auth, email, password)
+  .then((userCredential) => {
+    // Signed in
+    const user = userCredential.user;
+  })
+  .catch((error) => {
+    const errorCode = error.code;
+    const errorMessage = error.message;
+    console.log(errorCode, errorMessage)
+  });
+</script>
 </body>
+
 </html>
+
